--- a/index.html
+++ b/index.html
@@ -1,38 +1,84 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>简繁转换工具</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>簡繁轉換工具</title>
+    <!-- 載入 OpenCC 庫 -->
+    <script src="https://cdn.jsdelivr.net/npm/opencc-js@1.0.5/dist/umd/opencc.js"></script>
+    <style>
+        /* 基礎樣式 */
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+        }
+        .container {
+            background: #f5f5f5;
+            padding: 20px;
+            border-radius: 8px;
+        }
+        textarea {
+            width: 100%;
+            height: 150px;
+            margin: 10px 0;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        button {
+            background: #007bff;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 4px;
+            cursor: pointer;
+            margin: 5px;
+        }
+        button:hover {
+            background: #0056b3;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1>简繁转换工具</h1>
-        <div class="input-group">
-            <textarea id="inputText" placeholder="请输入要转换的文本"></textarea>
-            <button id="convert">转换</button>
-            <button id="clear">清除</button>
+        <h1>簡繁轉換工具</h1>
+        <textarea id="inputText" placeholder="輸入要轉換的文字..."></textarea>
+        <div>
+            <button onclick="convertToSimplified()">轉換為簡體</button>
+            <button onclick="convertToTraditional()">轉換為繁體</button>
+            <button onclick="copyResult()">複製結果</button>
         </div>
-        <div class="output-group">
-            <textarea id="outputText" placeholder="转换后的文本将显示在这里" readonly></textarea>
-            <button id="copyOutput">复制</button>
-        </div>
-        <div class="conversion-type">
-            <label for="conversionType">转换类型:</label>
-            <select id="conversionType">
-                <option value="zh-tw">简体转繁体</option>
-                <option value="zh-cn">繁体转简体</option>
-            </select>
-        </div>
-        <div class="history-section">
-            <h2>历史记录</h2>
-            <button id="exportHistory">导出历史记录</button>
-            <button id="clearHistory">清除历史记录</button>
-            <div id="historyList"></div>
-        </div>
+        <textarea id="outputText" readonly placeholder="轉換結果..."></textarea>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/zhconv/dist/zhconv.min.js"></script>
-    <script src="script.js"></script>
+
+    <script>
+        // 初始化轉換器
+        const converterTraditionalToSimplified = OpenCC.Converter({ from: 'tw', to: 'cn' });
+        const converterSimplifiedToTraditional = OpenCC.Converter({ from: 'cn', to: 'tw' });
+
+        // 轉換為簡體
+        function convertToSimplified() {
+            const input = document.getElementById('inputText').value;
+            const output = converterTraditionalToSimplified(input);
+            document.getElementById('outputText').value = output;
+        }
+
+        // 轉換為繁體
+        function convertToTraditional() {
+            const input = document.getElementById('inputText').value;
+            const output = converterSimplifiedToTraditional(input);
+            document.getElementById('outputText').value = output;
+        }
+
+        // 複製結果
+        function copyResult() {
+            const output = document.getElementById('outputText');
+            output.select();
+            navigator.clipboard.writeText(output.value);
+            alert('已複製結果！');
+        }
+    </script>
 </body>
 </html>
