--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>簡繁轉換工具</title>
+
     <!-- 載入 OpenCC 庫 -->
     <script src="https://cdn.jsdelivr.net/npm/opencc-js@1.0.5/dist/umd/opencc.js"></script>
+
     <style>
         /* 基礎樣式 */
         body {
@@ -41,6 +43,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>簡繁轉換工具</h1>
@@ -54,21 +57,37 @@
     </div>
 
     <script>
-        // 初始化轉換器
-        const converterTraditionalToSimplified = OpenCC.Converter({ from: 'tw', to: 'cn' });
-        const converterSimplifiedToTraditional = OpenCC.Converter({ from: 'cn', to: 'tw' });
+        let converterTraditionalToSimplified;
+        let converterSimplifiedToTraditional;
 
-        // 轉換為簡體
-        function convertToSimplified() {
+        // 初始化轉換器（異步函式）
+        async function initConverters() {
+            converterTraditionalToSimplified = await OpenCC.Converter({ from: 'tw', to: 'cn' });
+            converterSimplifiedToTraditional = await OpenCC.Converter({ from: 'cn', to: 'tw' });
+        }
+
+        // 等待 OpenCC 轉換器初始化
+        initConverters().catch(console.error);
+
+        // 轉換為簡體（使用異步函式）
+        async function convertToSimplified() {
+            if (!converterTraditionalToSimplified) {
+                alert("轉換器尚未載入，請稍候...");
+                return;
+            }
             const input = document.getElementById('inputText').value;
-            const output = converterTraditionalToSimplified(input);
+            const output = await converterTraditionalToSimplified(input);
             document.getElementById('outputText').value = output;
         }
 
-        // 轉換為繁體
-        function convertToTraditional() {
+        // 轉換為繁體（使用異步函式）
+        async function convertToTraditional() {
+            if (!converterSimplifiedToTraditional) {
+                alert("轉換器尚未載入，請稍候...");
+                return;
+            }
             const input = document.getElementById('inputText').value;
-            const output = converterSimplifiedToTraditional(input);
+            const output = await converterSimplifiedToTraditional(input);
             document.getElementById('outputText').value = output;
         }
 
