--- a/index.html
+++ b/index.html
@@ -57,37 +57,42 @@
     </div>
 
     <script>
+        // 直接初始化轉換器
         let converterTraditionalToSimplified;
         let converterSimplifiedToTraditional;
 
-        // 初始化轉換器（異步函式）
-        async function initConverters() {
-            converterTraditionalToSimplified = await OpenCC.Converter({ from: 'tw', to: 'cn' });
-            converterSimplifiedToTraditional = await OpenCC.Converter({ from: 'cn', to: 'tw' });
+        function initConverters() {
+            try {
+                converterTraditionalToSimplified = new OpenCC.Converter('t2s'); // 繁轉簡
+                converterSimplifiedToTraditional = new OpenCC.Converter('s2t'); // 簡轉繁
+                console.log("轉換器載入成功");
+            } catch (error) {
+                console.error("轉換器載入失敗", error);
+            }
         }
 
-        // 等待 OpenCC 轉換器初始化
-        initConverters().catch(console.error);
+        // 確保 OpenCC 載入後才初始化轉換器
+        document.addEventListener("DOMContentLoaded", initConverters);
 
-        // 轉換為簡體（使用異步函式）
-        async function convertToSimplified() {
+        // 轉換為簡體
+        function convertToSimplified() {
             if (!converterTraditionalToSimplified) {
                 alert("轉換器尚未載入，請稍候...");
                 return;
             }
             const input = document.getElementById('inputText').value;
-            const output = await converterTraditionalToSimplified(input);
+            const output = converterTraditionalToSimplified.convert(input);
             document.getElementById('outputText').value = output;
         }
 
-        // 轉換為繁體（使用異步函式）
-        async function convertToTraditional() {
+        // 轉換為繁體
+        function convertToTraditional() {
             if (!converterSimplifiedToTraditional) {
                 alert("轉換器尚未載入，請稍候...");
                 return;
             }
             const input = document.getElementById('inputText').value;
-            const output = await converterSimplifiedToTraditional(input);
+            const output = converterSimplifiedToTraditional.convert(input);
             document.getElementById('outputText').value = output;
         }
 
